subprojects {
	group = 'com.bp'
	version = '0.0.1-SNAPSHOT'

	ext {
		projectVersion = version;
		springBootVersion = '3.3.5'
		springKafkaVersion = '3.2.4'
	}

	apply plugin: 'java'

	sourceCompatibility = '17'

	repositories {
		mavenCentral()
		maven { url "https://packages.confluent.io/maven/"}
	}
}
